tests/promises/resolve_void.js
Promise.resolve() as Promise<number>; // error

Promise.resolve(undefined) as Promise<number>; // error
